@@ -157,100 +157,105 @@ $cms->init();
 $cms->init_theme($ps->conf['main']['theme'], $ps->conf['theme']);
 $ps->theme_setup($cms->theme);
 
-// create the form variable
-$form = $cms->new_form();
+// Do not load if this is one of the image scripts.
+if (!defined("PSFILE_IMGCOMMON_PHP")) {
 
-// Get cookie consent status from the cookie if it exists.
-$cms->session->options['cookieconsent'] ??= false;
-($ps->conf['main']['security']['enable_cookieconsent']) ? $cookieconsent = $cms->session->options['cookieconsent'] : $cookieconsent = 1;
-if (isset($cms->input['cookieconsent'])) {
-	$cookieconsent = $cms->input['cookieconsent'];
+	// create the form variable
+	$form = $cms->new_form();
 
-	// Update cookie consent status in the cookie if they are accepted.
-	// Delete coolies if they are rejected.
-	if ($cookieconsent) {
-		$cms->session->opt('cookieconsent', $cms->input['cookieconsent']);
-		$cms->session->save_session_options();
+	// Get cookie consent status from the cookie if it exists.
+	$cms->session->options['cookieconsent'] ??= false;
+	($ps->conf['main']['security']['enable_cookieconsent']) ? $cookieconsent = $cms->session->options['cookieconsent'] : $cookieconsent = 1;
+	if (isset($cms->input['cookieconsent'])) {
+		$cookieconsent = $cms->input['cookieconsent'];
 
-		// save a new form key in the users session cookie
-		// this will also be put into a 'hidden' field in the form
-		if ($ps->conf['main']['security']['csrf_protection']) $cms->session->key($form->key());
+		// Update cookie consent status in the cookie if they are accepted.
+		// Delete coolies if they are rejected.
+		if ($cookieconsent) {
+			$cms->session->opt('cookieconsent', $cms->input['cookieconsent']);
+			$cms->session->save_session_options();
+
+			// save a new form key in the users session cookie
+			// this will also be put into a 'hidden' field in the form
+			if ($ps->conf['main']['security']['csrf_protection']) $cms->session->key($form->key());
 		
-	} else {
-		$cms->session->delete_cookie();
-		$cms->session->delete_cookie('_id');
-		$cms->session->delete_cookie('_opts');
-		$cms->session->delete_cookie('_login');
+		} else {
+			$cms->session->delete_cookie();
+			$cms->session->delete_cookie('_id');
+			$cms->session->delete_cookie('_opts');
+			$cms->session->delete_cookie('_login');
+		}
+		previouspage($php_scnm);
 	}
-	previouspage($php_scnm);
-}
 
-# Are there divisions or wilcards in this league?
-$division = $ps->get_total_divisions() - 1;
-$wildcard = $ps->get_total_wc();
-$lastupdate	= $ps->get_lastupdate();
+	# Are there divisions or wilcards in this league?
+	$division = $ps->get_total_divisions() - 1;
+	$wildcard = $ps->get_total_wc();
+	$lastupdate	= $ps->get_lastupdate();
 
-// Is PsychoStats in maintenance mode?
-$maintenance = $ps->conf['main']['maintenance_mode']['enable'];
+	// Is PsychoStats in maintenance mode?
+	$maintenance = $ps->conf['main']['maintenance_mode']['enable'];
 
-// If PSVRAT is in maintenance mode display a message
-if ($maintenance and !defined("PSYCHOSTATS_ADMIN_PAGE")) {
-	$cms->full_page_err('awards', array(
-		'oscript'		=> $oscript,
-		'maintenance'	=> $maintenance,
-		'message_title'	=> $cms->trans("PSVRat Maintenance"),
-		'message'		=> $cms->trans("Please try again later."),
-		'lastupdate'	=> $lastupdate,
-		'division'		=> null,
-		'wildcard'		=> null,
-		'season'		=> null,
-		'season_c'		=> null,
-		'form_key'		=> $ps->conf['main']['security']['csrf_protection'] ? $cms->session->key() : '',
-		'cookieconsent'	=> $cookieconsent,
-	));
-	exit();
-}
+	// If PSVRAT is in maintenance mode display a message
+	if ($maintenance and !defined("PSYCHOSTATS_ADMIN_PAGE")) {
+		$cms->full_page_err('awards', array(
+			'oscript'		=> $oscript,
+			'maintenance'	=> $maintenance,
+			'message_title'	=> $cms->trans("PSVRat Maintenance"),
+			'message'		=> $cms->trans("Please try again later."),
+			'lastupdate'	=> $lastupdate,
+			'division'		=> null,
+			'wildcard'		=> null,
+			'season'		=> null,
+			'season_c'		=> null,
+			'form_key'		=> $ps->conf['main']['security']['csrf_protection'] ? $cms->session->key() : '',
+			'cookieconsent'	=> $cookieconsent,
+		));
+		exit();
+	}
 
-// Check to see if there is any data in the database before we continue.
-$cmd = "SELECT season FROM $ps->t_team_adv LIMIT 1";
-$nodata = array();
-$nodata = $ps->db->fetch_rows(1, $cmd);
+	// Check to see if there is any data in the database before we continue.
+	$cmd = "SELECT season FROM $ps->t_team_adv LIMIT 1";
+	$nodata = array();
+	$nodata = $ps->db->fetch_rows(1, $cmd);
 
-// if $nodata is empty then we have no data in the database
-if (empty($nodata) and !defined("PSYCHOSTATS_ADMIN_PAGE") and $oscript != 'help.php' and $oscript != 'credits.php' and $oscript != 'privacy.php') {
-	$cms->full_page_err('awards', array(
-		'oscript'		=> $oscript,
-		'maintenance'	=> $maintenance,
-		'message_title'	=> $cms->trans("No Stats Found"),
-		'message'		=> $cms->trans("psss.py must be run before any stats will be shown."),
-		'lastupdate'	=> $ps->get_lastupdate(),
-		'division'		=> null,
-		'wildcard'		=> null,
-		'season'		=> null,
-		'season_c'		=> null,
-		'form_key'		=> $ps->conf['main']['security']['csrf_protection'] ? $cms->session->key() : '',
-		'cookieconsent'	=> $cookieconsent,
-	));
-	exit();
-}
-unset ($nodata);
+	// if $nodata is empty then we have no data in the database
+	if (empty($nodata) and !defined("PSYCHOSTATS_ADMIN_PAGE") and $oscript != 'help.php' and $oscript != 'credits.php' and $oscript != 'privacy.php') {
+		$cms->full_page_err('awards', array(
+			'oscript'		=> $oscript,
+			'maintenance'	=> $maintenance,
+			'message_title'	=> $cms->trans("No Stats Found"),
+			'message'		=> $cms->trans("psss.py must be run before any stats will be shown."),
+			'lastupdate'	=> $ps->get_lastupdate(),
+			'division'		=> null,
+			'wildcard'		=> null,
+			'season'		=> null,
+			'season_c'		=> null,
+			'form_key'		=> $ps->conf['main']['security']['csrf_protection'] ? $cms->session->key() : '',
+			'cookieconsent'	=> $cookieconsent,
+		));
+		exit();
+	}
+	unset ($nodata);
 
-// If a language is passed from GET/POST update the user's cookie. 
-if (isset($cms->input['language'])) {
-	if ($cms->theme->is_language($cms->input['language'])) {
-		$cms->session->opt('language', $cms->input['language']);
-		$cms->session->save_session_options();
+	// If a language is passed from GET/POST update the user's cookie. 
+	if (isset($cms->input['language'])) {
+		if ($cms->theme->is_language($cms->input['language'])) {
+			$cms->session->opt('language', $cms->input['language']);
+			$cms->session->save_session_options();
 
-		// save a new form key in the users session cookie
-		// this will also be put into a 'hidden' field in the form
-		if ($ps->conf['main']['security']['csrf_protection']) $cms->session->key($form->key());
+			// save a new form key in the users session cookie
+			// this will also be put into a 'hidden' field in the form
+			if ($ps->conf['main']['security']['csrf_protection']) $cms->session->key($form->key());
 		
-	} else {
-		// report an error?
-		// na... just silently ignore the language
-//		trigger_error("Invalid theme specified!", E_USER_WARNING);
+		} else {
+			// report an error?
+			// na... just silently ignore the language
+	//		trigger_error("Invalid theme specified!", E_USER_WARNING);
+		}
+		previouspage($php_scnm);
 	}
-	previouspage($php_scnm);
+
 }
 
 ?>
